--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "isbot": "^4.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.174.0"
+    "three": "^0.174.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.2",
