--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/serve": "^2.16.2",
     "framer-motion": "^12.5.0",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.483.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.174.0",
