--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^12.5.0",
     "isbot": "^4.1.0",
     "lucide-react": "^0.483.0",
+    "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.174.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.16.2",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
