--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "arrowParens": "avoid",
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 120
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false
 }
